--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ footer {
   padding: 10px;
   border: 0px solid white;
   border-top: 4px solid #4aaaa5;
-  position:absolute;
+  position:relative;
 
 }
 
