--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ footer {
   width: 960px;
   height: 70px;
   margin-top: -200px;
+  margin-bottom: 0;
   padding: 10px;
   border: 0px solid white;
   border-top: 4px solid #4aaaa5;
