--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ footer {
   background-color: #666666;
   width: 960px;
   height: 70px;
-  margin-bottom: 0;
+  margin-bottom: -200px;
   padding: 10px;
   border: 0px solid white;
   border-top: 4px solid #4aaaa5;
